Prediction, Appointment updates

--- a/symptom-checker-web-app/public/css/app.css
+++ b/symptom-checker-web-app/public/css/app.css
@@ -112,6 +112,13 @@ body {
 } 
 
 
+/* Symptom Checker */
+.predict-btn{
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+
 /* Footer */
 .quick-links ul {
     list-style-type: none;
